# EDR-platform

./: .gitignore  agent_telemetry_template.json  all-files.txt  docker-compose.yml  package-lock.json  package.json
agent-core/: Cargo.toml
agent-core/src/: main.rs
backend/: Dockerfile  app.py  docker-compose.yml  main.py  package-lock.json  playbook.json  requirements.txt  sample-telemetry.json  telemetry.json
backend/app/: main.py
backend/app/ingestion/: collector.py
backend/app/memory/: correlation_engine.py  correlation_rules.json  memory_manager.py  memory_store.json  multi_endpoint_rules.json
backend/app/models/: agent.py  alert.py  telemetry.py
backend/app/routes/: agent_router.py  alert_router.py  collaboration.py  detection.py  explain.py  feedback.py  gamification.py  iocs.py  main.py  multi_correlation_router.py  rule_reload_router.py  rules.py  rules_router.py  score.py  telemetry.py  (+3 more)
backend/config/: package.json  rules.json
backend/ml/: train_model.py
dashboard/: Dockerfile  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: AlertTable.tsx  App.tsx  config.rs  index.css  main.tsx  web-vitals-attribution.d.ts
edr-agent/: Cargo.toml  relay.rs
edr-agent/forensic/: auth_watch.rs  file_watch.rs  file_watcher.rs  forensic_engine.rs  mod.rs  net_watch.rs  network_monitor.rs
edr-agent/modules/: file_watch.rs  net_watch.rs  process_monitor.rs  user_tracker.rs
edr-agent/src/: config.rs  main.rs
scripts/: policy_signer.py  send_real_telemetry.py  send_real_telemetry_daemon.py  send_telemetry.py  test_send.py
(+114 files in other folders)
