[package]
name = "agent-core"
version = "0.1.0"
edition = "2021"

[dependencies]
hostname = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
sysinfo = "=0.28.4" 

[dependencies]
anyhow            = "1.0"
serde             = { version = "1.0", features = ["derive"] }
ed25519-dalek     = "1.0"
sha3              = "0.10"
hex               = "0.4"

[dependencies]
notify = "6.1"
